--- a/index.html
+++ b/index.html
@@ -145,13 +145,25 @@ History
 </div>
 <h1 class="medium">What people say?</h1>
 <div class="review">
-    <div id="rev-con">Stella Larson
-        Proin sed libero enim sed faucibus turpis. At imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Ut sem nulla pharetra diam sit amet nisl. </div>
-    <div id="rev-con">Stella Larson
-        Proin sed libero enim sed faucibus turpis. At imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Ut sem nulla pharetra diam sit amet nisl. </div>
-    <div id="rev-con">Stella Larson
-        Proin sed libero enim sed faucibus turpis. At imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Ut sem nulla pharetra diam sit amet nisl. </div>
-</div>
+    <div id="rev-con" class="st-rev">
+        <h2>Stella Larson</h2> <br/>
+        Proin sed libero enim sed faucibus turpis. At imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Ut sem nulla pharetra diam sit amet nisl.<br/><br/><hr class="line"/> <br/> <br/> MONDAY, MAY 2022</div>
+    <div id="rev-con"><h2>Stella Larson</h2> <br/>
+        Proin sed libero enim sed faucibus turpis. At imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Ut sem nulla pharetra diam sit amet nisl. <br/><br/><hr class="line"/> <br/> <br/> MONDAY, MAY 2022</div>
+    <div id="rev-con"><h2>Stella Larson</h2> <br/>
+        Proin sed libero enim sed faucibus turpis. At imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Ut sem nulla pharetra diam sit amet nisl. <br/><br/><hr class="line"/> <br/> <br/> MONDAY, MAY 2022</div>
+    </div>
+    <div class="mail">
+        <div class="box-con"><h2 class="box-pad">DENTISTRY CLINIC</h2> 
+            <h1 class="bc">Quality Oral Health Care</h1>
+            <p>  Nam libero justo laoreet sit amet cursus sit amet. Pellentesque habitant morbi tristique senectus et netus. Sed augue lacus viverra vitae congue eu. Nunc mattis enim ut tellus elementum sagittis vitae.
+              <br/> <br/> <button class="btn">Contact us</button>
+            </p>
+           </div>
+        <div class="con-img"><img class="img-con" src="./img/wallpaperflare.com_wallpaper.jpg" alt=""></div>
+        
+    </div>
+         
 
 </body>
 </html>
