--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ History
       </div>
     </div>
 </div>
-
+</main>
     <h1 class="space">About Us</h1>
 
     <!-- <img src="./img/teeth-wallpaper-preview.jpg" alt=""> -->
@@ -145,13 +145,12 @@ History
 </div>
 <h1 class="medium">What people say?</h1>
 <div class="review">
-    <div id="rev-con" class="st-rev">
-        <h2>Stella Larson</h2> <br/>
-        Proin sed libero enim sed faucibus turpis. At imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Ut sem nulla pharetra diam sit amet nisl.<br/><br/><hr class="line"/> <br/> <br/> MONDAY, MAY 2022</div>
-    <div id="rev-con"><h2>Stella Larson</h2> <br/>
-        Proin sed libero enim sed faucibus turpis. At imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Ut sem nulla pharetra diam sit amet nisl. <br/><br/><hr class="line"/> <br/> <br/> MONDAY, MAY 2022</div>
-    <div id="rev-con"><h2>Stella Larson</h2> <br/>
-        Proin sed libero enim sed faucibus turpis. At imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Ut sem nulla pharetra diam sit amet nisl. <br/><br/><hr class="line"/> <br/> <br/> MONDAY, MAY 2022</div>
+    <div id="rev-con" class="st-rev"><h2>Stella Larson</h2>
+        Proin sed libero enim sed faucibus turpis. At imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Ut sem nulla pharetra diam sit amet nisl.<br/><hr class="line"/>  MONDAY, MAY 2022</div>
+    <div id="rev-con"><h2>Stella Larson</h2> 
+        Proin sed libero enim sed faucibus turpis. At imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Ut sem nulla pharetra diam sit amet nisl. <br/><hr class="line"/>   MONDAY, MAY 2022</div>
+    <div id="rev-con"><h2>Stella Larson</h2> 
+        Proin sed libero enim sed faucibus turpis. At imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Ut sem nulla pharetra diam sit amet nisl. <br/><hr class="line"/>   MONDAY, MAY 2022</div>
     </div>
     <div class="mail">
         <div class="box-con"><h2 class="box-pad">DENTISTRY CLINIC</h2> 
